--- a/templates/slot1.html
+++ b/templates/slot1.html
@@ -62,8 +62,26 @@
                 <a href="/update/{{task.id}}">Update</a>
             </td>
             <td>{{ task.no_adults + task.children }}</td>
+            {% set _ = total.append(total.pop() + task.no_adults + task.children) %}
         </tr>
     {% endfor %}
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td> Grand Total</td>
+      <td>{{ total[0] }}</td>
+    </tr>
+    {% if total[0] > 32 %}
+      <div class="alert">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+      Pool has exceeded its Current Occupancy!
+      </div>
+    {% endif %}
 </table>
 </div>
 {% endblock %}
