V3 of app with occupancy

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,8 @@
         {% endif %}
     </table>
     {% endif %}
+    <h2> Occupancy! </h2>
+    <span>{{(total[0]/32)*100//1}} &#37;</span>
 
     <div class="form">
         <form action="/" method="POST">
