--- a/templates/slot1.html
+++ b/templates/slot1.html
@@ -86,5 +86,7 @@
 </table>
 <h2> Occupancy! </h2>
 <span>{{(total[0]/32)*100//1}} &#37;</span>
+<h2> Slots Left : </h2>
+<span>{{32-total[0]}}</span>
 </div>
 {% endblock %}
