Added queries based on date for each specific time slot and added weekend feature with updated times

--- a/templates/Weekends.html
+++ b/templates/Weekends.html
@@ -9,28 +9,21 @@
 <div style="text-align:center;padding:1em 0;"> <h2> <iframe  allowtransparency="true" style="background: #FFFFFF;" src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=large&timezone=America%2FChicago&show=hour_minute" width="20%" height="140" frameborder="0" seamless></iframe> </div>
 <div class="forms">
 <form action="/slot1" method="post" style="display:inline-block">
-      <button class="button" name="showall"  type="submit"> Slot1<br>3:00pm-4:00pm</button>
+      <button class="button" name="showall"  type="submit"> Slot1<br>3:30pm-4:30pm</button>
 </form>
 <form action="/slot2" method="post" style="display:inline-block">
-      <button class="button button2" name="illustrator"  type="submit"> Slot2<br>4:30pm-5:30pm</button>
+      <button class="button button2" name="illustrator"  type="submit"> Slot2<br>5:00pm-6:00pm </button>
 </form>
 <form action="/slot3" method="post" style="display:inline-block">
-      <button class="button" name="showall"  type="submit"> Slot3<br>6:00pm-7:00pm</button>
+      <button class="button" name="showall"  type="submit"> Slot3<br>6:30pm-7:30pm</button>
 </form>
 <form action="/slot4" method="post" style="display:inline-block">
-      <button class="button button2" name="showall"  type="submit"> Slot4<br>7:30pm-8:30pm</button>
+      <button class="button button2" name="showall"  type="submit"> Slot4<br>8:00pm-9:00pm</button>
+</form>
+<form action="/slot5" method="post" style="display:inline-block">
+      <button class="button" name="showall"  type="submit"> Slot5<br>9:30pm-10:30pm</button>
 </form>
 </div>
-
-<!-- <div>
-  <form action="/" style="display:inline-block">
-        <button class="button" name="showall"  type="submit"> Weekends</button>
-  </form>
-  <form action="/Weekdays" style="display:inline-block">
-        <button class="button button2" name="showall"  type="submit"> Weekdays</button>
-  </form>
-
-</div> -->
 
 <div>
   <a href="/">
@@ -43,17 +36,7 @@
 
 </div>
 
-<div>
-<form action="/filter_date_page" method="post" style="display:inline-block">
-      <input type="date" id="filter_date" name="filter_date" required>
-      <button class="button" name="filter_button"  type="submit"> Filter </button>
-</form>
-</div>
-
-
-
 <div class="content">
-  <h1> No of Signups: {{count}} </h1>
   {% set total = [0] %}
     <h1 style="text-align: center">Registrations for the Pool</h1>
     {% if tasks|length < 1 %}
@@ -138,6 +121,12 @@
           Slot 4 is Full!
           </div>
         {% endif %}
+        {% if sum_slot5 > 31 %}
+          <div class="alert">
+          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+          Slot 5 is Full!
+          </div>
+        {% endif %}
 
     </table>
     {% endif %}
@@ -147,11 +136,28 @@
     <h2> Slots Left : </h2>
     <span>{{160-total[0]}}</span>
     </div>
+    <!-- <div>
+    <h2> Slot3 Occupancy! </h2>
+    <span>{{(sum_slot3/32)*100//1}} &#37;</span>
+    <h2> Slots Left : </h2>
+    <span>{{32-sum_slot3}}</span>
+    </div>
+    <div>
+    <h2> Slot4 Occupancy! </h2>
+    <span>{{(sum_slot4/32)*100//1}} &#37;</span>
+    <h2> Slots Left : </h2>
+    <span>{{32-sum_slot4}}</span>
+    </div>
+    <h2> Slot5 Occupancy! </h2>
+    <span>{{(sum_slot5/32)*100//1}} &#37;</span>
+    <h2> Slots Left : </h2>
+    <span>{{32 - sum_slot5}}</span>
+    </div> -->
 
 <div class="row">
   <div class="column">
     <div class="card my_red_color">
-      <h3>Slot 1 Occupancy! <br>3:30pm-4:30pm </h3>
+      <h3>Slot 1 Occupancy! <br>1:30pm-2:30pm </h3>
       <p>{{(sum_slot1/32)*100//1}} &#37;</p>
       <p>Slots Left : {{32-sum_slot1}}</p>
     </div>
@@ -181,6 +187,14 @@
     </div>
   </div>
 
+  <div class="column">
+    <div class="card my_red_color">
+      <h3>Slot 5 Occupancy!</h3>
+      <p>{{(sum_slot5/32)*100//1}} &#37;</p>
+      <p>Slots Left : {{32-sum_slot5}}</p>
+    </div>
+  </div>
+</div>
 <h3 style="text-align: center">Signup here!</h3>
     <div class="form">
         <form action="/" method="POST">
@@ -201,7 +215,7 @@
                <option value="Slot2">Slot2</option>
                <option value="Slot3">Slot3</option>
                <option value="Slot4">Slot4</option>
-               <!-- <option value="Slot5">Slot5</option> -->
+               <option value="Slot5">Slot5</option>
              </select>
             </p>
             <p>
