--- a/templates/slot.html
+++ b/templates/slot.html
@@ -13,19 +13,19 @@
       <button class="button homebtn" type="submit"> Home</button>
 </form>
 <form action="/slot1" method="post" style="display:inline-block">
-      <button class="button" name="showall"  type="submit"> Slot1<br>1:30pm-2:30pm</button>
+      <button class="button" name="showall"  type="submit"> Slot1 </button>
 </form>
 <form action="/slot2" method="post" style="display:inline-block">
-      <button class="button button2" name="illustrator"  type="submit"> Slot2<br>3:00pm-4:00pm</button>
+      <button class="button button2" name="illustrator"  type="submit"> Slot2 </button>
 </form>
 <form action="/slot3" method="post" style="display:inline-block">
-      <button class="button" name="showall"  type="submit"> Slot3<br>4:30pm-5:30pm</button>
+      <button class="button" name="showall"  type="submit"> Slot3 </button>
 </form>
 <form action="/slot4" method="post" style="display:inline-block">
-      <button class="button button2" name="showall"  type="submit"> Slot4<br>6:00pm-7:00pm</button>
+      <button class="button button2" name="showall"  type="submit"> Slot4 </button>
 </form>
 <form action="/slot5" method="post" style="display:inline-block">
-      <button class="button" name="showall"  type="submit"> Slot5<br>7:30pm-8:30pm</button>
+      <button class="button" name="showall"  type="submit"> Slot5 <br></button>
 </form>
 </div>
 
